--- a/html/选择器.html
+++ b/html/选择器.html
@@ -88,6 +88,13 @@
         div > p[title] {
             color: deeppink;
         }
+        a:active{}
+        p:first-child{}
+        p:last-child{}
+        p:nth-child(5){} /*括号了是an+b*/
+        p:first-of-type{}
+        p:last-of-type{}
+        p:nth-last-of-type(5){} /*括号了是an+b*/
     </style>
 </head>
 <body>
