--- a/html/选择器.html
+++ b/html/选择器.html
@@ -95,6 +95,12 @@
         p:first-of-type{}
         p:last-of-type{}
         p:nth-last-of-type(5){} /*括号了是an+b*/
+        div::first-letter{}
+        div::first-line{}
+        div::selection{}
+        input::placeholder{}
+        p::before{ content: "￥"}
+        p::after{content: ".00"}
     </style>
 </head>
 <body>
