--- a/html/选择器.html
+++ b/html/选择器.html
@@ -89,7 +89,7 @@
             color: deeppink;
         }
         a:active{}
-        p:first-child{}
+        p:first-child{display: inline-block}
         p:last-child{}
         p:nth-child(5){} /*括号了是an+b*/
         p:first-of-type{}
@@ -101,6 +101,7 @@
         input::placeholder{}
         p::before{ content: "￥"}
         p::after{content: ".00"}
+
     </style>
 </head>
 <body>
